--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -10,8 +10,12 @@
 
         <Button
             android:id="@+id/bTextGroup"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:background="@android:drawable/alert_dark_frame"
+            android:fontFamily="sans-serif-smallcaps"
+            android:text="Button"
+            android:textColor="@color/colorAccent"
+            android:textSize="24sp" />
     </android.support.v7.widget.CardView>
 </RelativeLayout>
