--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -11,7 +11,7 @@
         android:id="@+id/postCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="?android:attr/colorButtonNormal">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,21 +27,21 @@
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TITOLO"
+                    android:text="Post"
                     android:textColor="@android:color/background_dark" />
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="AUTORE"
+                    android:text="Autore"
                     android:textColor="@android:color/background_dark" />
 
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="DATA"
+                    android:text="Data"
                     android:textColor="@android:color/background_dark" />
             </LinearLayout>
 
@@ -54,22 +54,28 @@
                     android:id="@+id/tTitolo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="cursive"
                     android:text="TextView"
-                    android:textColor="@android:color/background_dark" />
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tAutore"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="cursive"
                     android:text="TextView"
-                    android:textColor="@android:color/background_dark" />
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tData"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="cursive"
                     android:text="TextView"
-                    android:textColor="@android:color/background_dark" />
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textStyle="bold" />
 
             </LinearLayout>
         </LinearLayout>
